small tweaks, add TODO.md

--- a/src/components/button/button-subtle.less
+++ b/src/components/button/button-subtle.less
@@ -1,8 +1,5 @@
 /** button-subtle.less */
 
-// subtle button
-// =============
-
 .btn.btn--subtle {
 
     box-sizing: border-box;
@@ -18,12 +15,16 @@
     &:hover {
         background: @color-base-24;
         border-color: transparent;
+        box-shadow: none;
+        text-shadow: none;
     }
 
     &:active,
     &.is--active {
         background: @color-base-22;
         border-color: transparent;
+        box-shadow: none;
+        text-shadow: none;
     }
 
 }
