--- a/src/components/pagedots/pagedots.less
+++ b/src/components/pagedots/pagedots.less
@@ -59,7 +59,7 @@
 }
 
 .pageDots__dot.is--active::after {
-    .mixin-icon-bg(@id: 'icon-079-s', @width: 24, @height: 24, @fillColor: @color-base-8);
+    .mixin-icon-bg(@id: 'icon-079-s', @width: 24, @height: 24, @fillColor: @color-primary-15);
 }
 
 // arrow-left icon
@@ -116,7 +116,7 @@
     }
 
     .pageDots__dot.is--active::after {
-        .mixin-icon-bg(@id: 'icon-079-s', @width: 24, @height: 24, @fillColor: @color-white);
+        .mixin-icon-bg(@id: 'icon-079-s', @width: 24, @height: 24, @fillColor: @color-primary-23);
     }
 
     // arrow-left icon
