--- a/src/components/pagination/pagination.less
+++ b/src/components/pagination/pagination.less
@@ -43,6 +43,6 @@
 
 .pagination .is--active .btn,
 .pagination .is--active .btn:hover {
-    background: @color-base-10;
+    background: @color-primary-15;
     color: @color-base-24;
 }
