--- a/src/components/stepcrumb/stepcrumb.less
+++ b/src/components/stepcrumb/stepcrumb.less
@@ -101,7 +101,7 @@
 // label
 
 .stepCrumb__label {
-    color: @color-positive-8;
+    color: @color-primary-8;
     display: none;
     padding: 0 0 0 1rem;
     text-decoration: none;
@@ -131,19 +131,19 @@
 .stepCrumb--step9 .stepCrumb__item:nth-child(9),
 .stepCrumb--step10 .stepCrumb__item:nth-child(10) {
 
-    color: @color-positive-8;
+    color: @color-primary-8;
     padding: 0 .5rem 0 3.5rem;
     width: auto;
 
     // step number
 
     &::after {
-        background: @color-positive-10;
-        color: @color-positive-24;
+        background: @color-primary-10;
+        color: @color-primary-24;
     }
     
     &:hover::after {
-        background: @color-positive-8;
+        background: @color-primary-8;
     }
     
     // show the label, only on current step
