add parallax behaviour, improve scrollAgent

--- a/src/less/utilities/color-base.less
+++ b/src/less/utilities/color-base.less
@@ -12,10 +12,11 @@
     .bg-blue-@{i}      { background: ~"@{blue-@{i}}" !important; }
     .bg-gray-@{i}      { background: ~"@{gray-@{i}}" !important; }
     .bg-green-@{i}     { background: ~"@{green-@{i}}" !important; }
-    .bg-main-@{i}      { background: ~"@{color-base-@{i}}" !important; }
+    .bg-base-@{i}      { background: ~"@{color-base-@{i}}" !important; }
     .bg-negative-@{i}  { background: ~"@{color-negative-@{i}}" !important; }
     .bg-positive-@{i}  { background: ~"@{color-positive-@{i}}" !important; }
     .bg-purple-@{i}    { background: ~"@{purple-@{i}}" !important; }
+    .bg-primary-@{i}   { background: ~"@{color-primary-@{i}}" !important; }
     .bg-red-@{i}       { background: ~"@{red-@{i}}" !important; }
     .bg-yellow-@{i}    { background: ~"@{yellow-@{i}}" !important; }
 
@@ -25,10 +26,11 @@
     .bc-blue-@{i}      { border-color: ~"@{blue-@{i}}" !important; }
     .bc-gray-@{i}      { border-color: ~"@{gray-@{i}}" !important; }
     .bc-green-@{i}     { border-color: ~"@{green-@{i}}" !important; }
-    .bc-main-@{i}      { border-color: ~"@{color-base-@{i}}" !important; }
+    .bc-base-@{i}      { border-color: ~"@{color-base-@{i}}" !important; }
     .bc-negative-@{i}  { border-color: ~"@{color-negative-@{i}}" !important; }
     .bc-positive-@{i}  { border-color: ~"@{color-positive-@{i}}" !important; }
     .bc-purple-@{i}    { border-color: ~"@{purple-@{i}}" !important; }
+    .bc-primary-@{i}   { border-color: ~"@{color-primary-@{i}}" !important; }
     .bc-red-@{i}       { border-color: ~"@{red-@{i}}" !important; }
     .bc-yellow-@{i}    { border-color: ~"@{yellow-@{i}}" !important; }
 
@@ -38,10 +40,11 @@
     .tc-blue-@{i}      { color: ~"@{blue-@{i}}" !important; }
     .tc-gray-@{i}      { color: ~"@{gray-@{i}}" !important; }
     .tc-green-@{i}     { color: ~"@{green-@{i}}" !important; }
-    .tc-main-@{i}      { color: ~"@{color-base-@{i}}" !important; }
+    .tc-base-@{i}      { color: ~"@{color-base-@{i}}" !important; }
     .tc-negative-@{i}  { color: ~"@{color-negative-@{i}}" !important; }
     .tc-positive-@{i}  { color: ~"@{color-positive-@{i}}" !important; }
     .tc-purple-@{i}    { color: ~"@{purple-@{i}}" !important; }
+    .tc-primary-@{i}   { color: ~"@{color-primary-@{i}}" !important; }
     .tc-red-@{i}       { color: ~"@{red-@{i}}" !important; }
     .tc-yellow-@{i}    { color: ~"@{yellow-@{i}}" !important; }
 
