--- a/src/components/hint/hint.less
+++ b/src/components/hint/hint.less
@@ -11,6 +11,11 @@
 // modifiers
 // =========
 
+.hint--primary {
+    border-color: @color-primary-15;
+    color: @color-primary-12;
+}
+
 .hint--attention {
     border-color: @yellow-15;
     color: @yellow-12;
