--- a/src/components/form/customcheckbox.less
+++ b/src/components/form/customcheckbox.less
@@ -42,12 +42,12 @@
 
 // validation
 
-.checkbox.input--error {
+.checkbox.input--negative {
     border-color: @color-negative-15;
     color: @color-negative-8;
 }
 
-.checkbox.input--success {
+.checkbox.input--positive {
     border-color: @color-positive-15;
     color: @color-positive-8;
 }
