--- a/src/components/form/customradiobutton.less
+++ b/src/components/form/customradiobutton.less
@@ -44,12 +44,12 @@
 
 // validation
 
-.radio.input--error {
+.radio.input--negative {
     border-color: @color-negative-15;
     color: @color-negative-8;
 }
 
-.radio.input--success {
+.radio.input--positive {
     border-color: @color-positive-15;
     color: @color-positive-8;
 }
