--- a/src/components/form/customselect.less
+++ b/src/components/form/customselect.less
@@ -87,12 +87,12 @@
 
 // validation
 
-.select.input--error {
+.select.input--negative {
     border-color: @color-negative-15;
     color: @color-negative-8;
 }
 
-.select.input--success {
+.select.input--positive {
     border-color: @color-positive-15;
     color: @color-positive-8;
 }
