--- a/src/components/hint/hint.less
+++ b/src/components/hint/hint.less
@@ -17,16 +17,16 @@
 }
 
 .hint--attention {
-    border-color: @yellow-15;
-    color: @yellow-12;
+    border-color: @color-attention-15;
+    color: @color-attention-12;
 }
 
-.hint--positive, .hint--success {
-    border-color: @green-15;
-    color: @green-12;
+.hint--positive {
+    border-color: @color-positive-15;
+    color: @color-positive-12;
 }
 
-.hint--negative, .hint--error {
-    border-color: @red-15;
-    color: @red-12;
+.hint--negative {
+    border-color: @color-negative-15;
+    color: @color-negative-12;
 }
