--- a/src/components/icon/icon.less
+++ b/src/components/icon/icon.less
@@ -61,7 +61,7 @@
 
 /*
     Any .icon inside a parent element with a certain color modifier "inherit" the colors of their parent.
-    However, the color modifier class names applied directly to .btnDismiss (eg. icon icon--error)
+    However, the color modifier class names applied directly to .btnDismiss (eg. icon icon--negative)
     beat the inheritance. In order to up the specificity, we repeat the modifier class name. It's actually
     not even a hack:
 
@@ -76,18 +76,14 @@
     }
 }
 
-[class*="--success"] .icon,
 [class*="--positive"] .icon,
-.icon.icon--success.icon--success,
 .icon.icon--positive.icon--positive {
     circle, ellipse, path, polygon {
         fill: @color-positive-8;
     }
 }
 
-[class*="--error"] .icon,
 [class*="--negative"] .icon,
-.icon.icon--error.icon--error,
 .icon.icon--negative.icon--negative {
     circle, ellipse, path, polygon {
         fill: @color-negative-8;
