add style guide

--- a/src/less/config/options.less
+++ b/src/less/config/options.less
@@ -19,4 +19,4 @@
 @positionSteps                 : 10;    // steps for micro-positioning utility classes, multiplicand: 1 PX
 @responsivePositionSteps       : 10;    // steps for responsive micro-positioning utility classes, multiplicand: 1 PX
 
-@fullColorPalette              : false; // switch between a full or optimized color palette
+@fullColorPalette              : true;  // switch between a full or optimized color palette
