--- a/src/less/core/debug.less
+++ b/src/less/core/debug.less
@@ -136,7 +136,7 @@ body::after when (@debugMediaquery = true) {
     background-color: @gray-2;
     bottom: 2rem;
     color: @gray-20;
-    font-family: Consolas, Monaco, 'Andale Mono', monospace;
+    font-family: @font-mono;
     font-size: 1.2em;
     height: 5rem;
     left: 2rem;
