--- a/src/less/config/typography.less
+++ b/src/less/config/typography.less
@@ -30,7 +30,7 @@
 
 // font families
 
-@font-mono:      'Courier', monospace;
+@font-mono:      'Monaco', monospace;
 @font-sansserif: 'Open Sans', sans-serif;
 @font-serif:     'Georgia', serif;
 
