--- a/src/less/core/debug.less
+++ b/src/less/core/debug.less
@@ -137,7 +137,7 @@ body::after when (@debugMediaquery = true) {
     bottom: 2rem;
     color: @gray-20;
     font-family: @font-mono;
-    font-size: 1.2em;
+    font-size: 1.5rem;
     height: 5rem;
     left: 2rem;
     line-height: 3;
