--- a/src/components/code/code.less
+++ b/src/components/code/code.less
@@ -140,7 +140,7 @@ p, td, li {
     .kt  { color: @yellow-18; }
     .ld  { color: @green-15; }
     .m   { color: @yellow-15; }
-    .s   { color: @green-15; }
+    .s   { color: @yellow-13; }
     .na  { color: @blue-11; }
     .nb  { color: @blue-11; }
     .nc  { color: @yellow-18; }
