update docs, small tweaks

--- a/docs/_layouts/ajax.html
+++ b/docs/_layouts/ajax.html
@@ -5,7 +5,7 @@
         <title>{{ page.title }}</title>
     </head>
     <body>
-        <div id="ajaxContent">
+        <div id="yoi-update-src">
             {{ content }}
         </div>
     </body>
