--- a/src/less/config/options.less
+++ b/src/less/config/options.less
@@ -18,5 +18,6 @@
 @responsiveSpacingSteps        : 60;    // steps for responsive margin & padding utility classes, multiplicand: 0.5 REM
 @positionSteps                 : 10;    // steps for micro-positioning utility classes, multiplicand: 1 PX
 @responsivePositionSteps       : 10;    // steps for responsive micro-positioning utility classes, multiplicand: 1 PX
+@animationDuration             : 0.5;   // default css animation duration
 
 @fullColorPalette              : true;  // switch between a full or optimized color palette
